@@ -25,7 +25,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-    <maven.compiler.release>21</maven.compiler.release>
+    <maven.compiler.release>26</maven.compiler.release>
 
     <slf4j.version>2.0.13</slf4j.version>
     <logback.version>1.5.6</logback.version>
@@ -35,8 +35,8 @@
 
     <surefire.version>3.2.5</surefire.version>
     <compiler.plugin.version>3.13.0</compiler.plugin.version>
-    <spotless.version>2.43.0</spotless.version>
-    <palantir.version>2.50.0</palantir.version>
+    <spotless.version>2.44.5</spotless.version>
+    <palantir.version>2.68.0</palantir.version>
 
     <enforcer.plugin.version>3.5.0</enforcer.plugin.version>
   </properties>
@@ -82,6 +82,9 @@
           <version>${compiler.plugin.version}</version>
           <configuration>
             <release>${maven.compiler.release}</release>
+            <compilerArgs>
+              <arg>--enable-preview</arg>
+            </compilerArgs>
           </configuration>
         </plugin>
         <plugin>
@@ -90,6 +93,7 @@
           <version>${surefire.version}</version>
           <configuration>
             <useModulePath>false</useModulePath>
+            <argLine>--enable-preview</argLine>
           </configuration>
         </plugin>
         <plugin>
@@ -156,7 +160,7 @@
                   <version>[3.9.0,)</version>
                 </requireMavenVersion>
                 <requireJavaVersion>
-                  <version>[21,)</version>
+                  <version>[26,)</version>
                 </requireJavaVersion>
               </rules>
             </configuration>
